# Phoenix

./: .gitignore  CMakeLists.txt  README.md  app
Phoenix/: CMakeLists.txt  Phoenix.hpp  main.cpp  phoenix.hpp
Phoenix/Asset/: ResourceHandler.h  ResourceIdentifiers.h
Phoenix/Core/: Application.cpp  Application.h  EntryPoint.cpp  Gameplay.hpp
Phoenix/Game/: Game.cpp  Gameplay.hpp
Phoenix/Scene/: Components.h  Entity.cpp  EntityTag.h  Scene.h
Phoenix/Scene/Systems/: Physics.h  Render.cpp
Phoenix/Utils/: Debug.h  Utils.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h
Sandbox/src/: Game.h  Gameplay.hpp
src/: main.cpp
src/Asset/: ResourceHandler.h  TextureLoader.cpp  TextureLoader.h
src/Game/: Game.cpp  Game.h  Gameplay.hpp
src/Scene/: Components.h  Entity.cpp  Entity.h  EntityManager.h  EntityManager.inl  EntityTag.h  Scene.h  Scene.inl
src/Scene/Scenes/: GameScene.cpp  GameScene.h
src/Scene/Systems/: Physics.cpp  PhysicsSystem.h  Render.cpp  Render.h  RenderSystem.h
src/Utils/: Debug.h
src/View/: Window.cpp  Window.h
